// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`creating and testing snapshots 1`] = `
<DocumentFragment>
  <div>
    <form>
      <label
        for="backgroundColor"
      >
        Background Color
      </label>
      <input
        id="backgroundColor"
        name="backgroundColor"
        value=""
      />
      <label
        for="width"
      >
        Width
      </label>
      <input
        id="width"
        name="width"
        value="0"
      />
      <label
        for="height"
      >
        Height
      </label>
      <input
        id="height"
        name="height"
        value="0"
      />
      <button>
        Send
      </button>
    </form>
  </div>
</DocumentFragment>
`;

exports[`submit 1`] = `
<DocumentFragment>
  <div>
    <form>
      <label
        for="backgroundColor"
      >
        Background Color
      </label>
      <input
        id="backgroundColor"
        name="backgroundColor"
        value=""
      />
      <label
        for="width"
      >
        Width
      </label>
      <input
        id="width"
        name="width"
        value="0"
      />
      <label
        for="height"
      >
        Height
      </label>
      <input
        id="height"
        name="height"
        value="0"
      />
      <button>
        Send
      </button>
    </form>
    <div
      id="2dca9fc2-ccde-4010-98aa-d7944cd2367a"
    >
      <div
        style="background-color: blue; height: 100px; width: 100px;"
      />
      <button>
        X
      </button>
    </div>
  </div>
</DocumentFragment>
`;
